@@ -6,6 +6,8 @@ import com.example.board.dto.BoardUpdateReqDto;
 import com.example.board.dto.BoardWriteDto;
 import com.example.board.dto.CommentResDto;
 import com.example.board.entity.Board;
+import com.example.board.entity.Role;
+import com.example.board.entity.User;
 import com.example.board.repository.BoardRepository;
 import com.example.board.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
@@ -15,7 +17,6 @@ import org.springframework.ui.Model;
 import java.security.Principal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,26 +27,43 @@ public class BoardServiceImpl implements BoardService {
     private final CommentService commentService;
 
     @Override
-    public List<BoardResDto> findAllBoard() {
-        List<Board> boards = boardRepository.findByHiddenFalse();
+    public List<BoardResDto> findBoardsByRole(Principal principal) {
+        boolean isAdmin = false;
+        if (principal != null) {
+            User user = userRepository.findByUsername(principal.getName())
+                    .orElseThrow();
+            isAdmin = user.getRole() == Role.ROLE_ADMIN;
+        }
+
+        List<Board> boards = isAdmin
+                ?boardRepository.findAll()
+                :boardRepository.findByHiddenFalse();
 
         return boards.stream()
                 .map(board -> new BoardResDto(
                         board.getId(),
                         board.getTitle(),
                         board.getContent(),
-                        board.getAuthor().getUsername(),
+                        board.getAuthor().getRole().equals(Role.ROLE_ADMIN)
+                                ?"관리자"
+                                :board.getAuthor().getUsername(),
+                        board.isHidden(),
                         board.getCreatedAt(),
                         board.getUpdatedAt()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public void hideBoard(Long id) {
+    public void toggleHiddenBoard(Long id, Principal principal) {
         Board board = boardRepository.findById(id).orElseThrow();
-        board.setHidden(true);
-        boardRepository.save(board);
+        if (principal != null) {
+            User user = userRepository.findByUsername(principal.getName()).orElseThrow();
+            if (user.getRole().equals(Role.ROLE_ADMIN)) {
+                board.setHidden(!board.isHidden());
+                boardRepository.save(board);
+            }
+        }
     }
 
     @Override
